<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/GenerationStepHeaderText"
        android:text="@string/n_choose_size_count" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/common_v_spacing"
            android:paddingLeft="@dimen/common_lr_spacing"
            android:paddingRight="@dimen/common_lr_spacing"
            android:paddingTop="@dimen/common_v_spacing">

            <TextView
                android:id="@+id/choose_size_and_count_fixed_size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_views_spacing"
                android:text="@string/fixed_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_width_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_views_spacing"
                android:hint="@string/width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_height_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_fixed_size_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_width"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_height" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_height_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_views_spacing"
                android:layout_marginRight="@dimen/common_views_spacing"
                android:hint="@string/height"
                app:layout_constraintLeft_toRightOf="@+id/choose_size_and_count_et_width_holder"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_count_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_fixed_size_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_height"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_count" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_count_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_views_spacing"
                android:hint="@string/count"
                app:layout_constraintLeft_toRightOf="@+id/choose_size_and_count_et_height_holder"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_fixed_size_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_count"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/choose_size_and_count_width_range_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_views_spacing"
                android:paddingTop="@dimen/common_views_spacing"
                android:text="@string/width_range"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_et_count_holder" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_width_range_from_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_views_spacing"
                android:hint="@string/from"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_width_range_to_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_width_range_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_width_range_from"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_width_range_to" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_width_range_to_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_views_spacing"
                android:layout_marginRight="@dimen/common_views_spacing"
                android:hint="@string/to"
                app:layout_constraintLeft_toRightOf="@+id/choose_size_and_count_et_width_range_from_holder"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_width_range_step_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_width_range_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_width_range_to"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_width_range_step" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_width_range_step_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_views_spacing"
                android:hint="@string/step"
                app:layout_constraintLeft_toRightOf="@+id/choose_size_and_count_et_width_range_to_holder"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_width_range_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_width_range_step"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/choose_size_and_count_height_range_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_views_spacing"
                android:paddingTop="@dimen/common_views_spacing"
                android:text="@string/height_range"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_et_width_range_step_holder" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_height_range_from_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_views_spacing"
                android:hint="@string/from"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_height_range_to_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_height_range_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_height_range_from"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_height_range_to" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_height_range_to_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_views_spacing"
                android:layout_marginRight="@dimen/common_views_spacing"
                android:hint="@string/to"
                app:layout_constraintLeft_toRightOf="@+id/choose_size_and_count_et_height_range_from_holder"
                app:layout_constraintRight_toLeftOf="@+id/choose_size_and_count_et_height_range_step_holder"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_height_range_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_height_range_to"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/choose_size_and_count_et_height_range_step" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/choose_size_and_count_et_height_range_step_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_views_spacing"
                android:hint="@string/step"
                app:layout_constraintLeft_toRightOf="@+id/choose_size_and_count_et_height_range_to_holder"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_size_and_count_height_range_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/choose_size_and_count_et_height_range_step"
                    style="@style/SizeAndCountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>