...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/generator_type_item_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/common_views_spacing"
        android:layout_marginRight="@dimen/common_views_spacing"
        android:layout_marginBottom="@dimen/common_v_spacing"
...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/generator_type_item_image"
                tools:text="GENERATOR" />

            <ImageView
                android:id="@+id/generator_type_item_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/generator_type_item_image"
                app:layout_constraintLeft_toLeftOf="@+id/generator_type_item_image"
                app:layout_constraintRight_toRightOf="@+id/generator_type_item_image"
                app:layout_constraintTop_toTopOf="@+id/generator_type_item_image"
...
